src/styles.css
:root {
  --primary-color: #EB615B;
}

body {
  /* background-color: #1D1D20; */
  font-family: 'Montserrat', sans-serif;
  color: white;
}

nav {
  position: fixed;
  padding-top: 18px;
  overflow: hidden;
  box-shadow: 0px 5px 10px #0a0a0a;
}

.projects-section nav,
.about-section nav,
.contact-section nav {
  position: relative;
  overflow: hidden;
}

nav ul {
  width: 100vw;
  justify-content: center;
  position: relative;
  left: -22px;
}

nav li {
  list-style: none;
}

nav a {
  border: 0 !important;
  margin: 27px !important;
  padding: 27px !important;
  opacity: 70% !important;
  color: white;
  text-decoration: none;
  font-size: 14px !important;
}

nav .active {
  font-weight: bold;
  border-radius: 10px;
  opacity: 100% !important;
  color: var(--primary-color) !important;
}

nav a:hover {
  opacity: 100% !important;
}

.home-body {
  overflow-x: hidden;
  overflow-y: hidden;
}

.home-section footer {
  position: absolute;
  bottom: 9px;
  font-size: 12px;
  opacity: 45%;
  display: block;
  text-align: center;
}

.about-section footer,
.projects-section footer {
  padding: 9px 0;
  font-size: 12px;
  opacity: 45%;
  display: block;
  text-align: center;
}

.home-section {
  background-image: url("../images/Dusty-Particles.png");
  background-size: 100vw;
  background-attachment: fixed;
  background-color: black;
  background-repeat: no-repeat;
}

.home-section h2 {
  font-size: 72px;
  opacity: 70%;
  line-height: 1.5;
}

.home-section h5 {
  font-size: 16px;
  opacity: 75%;
}

.homepage-nav-links {
  margin-top: 50px;
}

.home-section a {
  margin-right: 10px;
  border: 3px transparent solid;
  border-left: 3px var(--primary-color) solid;
  border-right: 3px transparent solid;
  padding: 15px 20px;
  text-decoration: none;
  color: white;
  font-size: 14px;
  opacity: 70%;
  transition: all .25s ease-in-out;
}

.home-section a:hover {
  border: 3px var(--primary-color) solid;
  opacity: 75%;
}

.about-section {
  background: black;
  overflow-x: hidden;
}

.about-section h2 {
  line-height: 2;
  margin: 20px 0 15px 0;
  opacity: 85%;
}

.journey-box {
  max-width: 85%;
  margin: 0 auto;
}

.journey-section ul {
  list-style: none;
}

.journey-section li {
  margin-bottom: 9px;
  font-size: 20px;
  opacity: 90%;
  padding: 20px 10px;
}

.journey-section p {
  font-size: 13px;
  padding-left: 10px;
  opacity: 85%;
  line-height: 2;
}

.journey-intro {
  max-width: 80%;
}

.journey-intro p {
  border-left: 2px solid var(--primary-color);
  font-size: 14px;
  line-height: 1.8;
  padding-left: 18px;
}

.info-para {
  padding: 6px;
  margin-left: 20px;
  border-left: 2px solid var(--primary-color);
  border-bottom: 2px solid var(--primary-color);
  border-bottom-left-radius: 10px;
  opacity: 90%;
}

.hobbies-section {
  margin-left: 30px;
  overflow-x: hidden;
}

.hobbies-section p {
  font-size: 11px;
}

.hobbies-section h6 {
  font-size: 15px;
  opacity: 90%;
}

.hobbies-section p {
  padding-right: 15px;
  line-height: 1.8;
  font-size: 13px;
  margin-bottom: 18px;
  opacity: 75%;
}

.hobbies-first-col {
  border-right: 1px solid var(--primary-color);
}

.journey-section a {
  text-decoration: none;
  color: var(--primary-color);
  font-weight: bold;
}

.journey-section a:hover {
  text-decoration: underline;
}

.journey-btns {
  margin-top: 10px;
  margin-left: 140px;
}

.journey-btn {
  font-size: 13px;
  font-weight: bold;
  opacity: 90%;
  padding: 13px;
  border-radius: 5px;
  text-decoration: none;
  color: var(--primary-color);
  border: 1px solid var(--primary-color);
  transition: all .25s ease-in-out;
}

.journey-btn:hover {
  color: black;
  background-color: var(--primary-color);
  opacity: 95%;
}

.projects-section {
  background: black;
}

.projects-rows {
  max-width: 75%;
  margin: 0 auto;
  opacity: 85%;
}

.projects-rows a {
  color: var(--primary-color);
  text-decoration: none;
  width: 50%;
}

.projects-rows h6 a:hover {
  text-decoration: underline;
}

.each-project {
  padding-bottom: 30px;
  border-bottom: 1px solid var(--primary-color);
}

.projects-section h2 {
  font-size: 36px;
  text-shadow: 1px 2px 3px rgba(255, 255, 255, 0.76);
  opacity: 80%;
}

.projects-section p {
  font-size: 13px;
  padding-left: 10px;
  border-left: 1px solid var(--primary-color);
}

.project-image {
  opacity: 90%;
  padding: 5px;
  display: block;
  margin: 0 auto;
}

.projects-rows h5 {
  font-size: 16px;
  font-weight: bold;
  opacity: 85%;
  line-height: 1.5;
  position: relative;
  top: -40px;
  text-align: center;
}

.project-card h6 {
  font-size: 14px;
  margin-top: 15px;
}

.contact-section {
  background: black;
  overflow: hidden;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.contact-section h2 {
  opacity: 90%;
}

.contact-cards {
  margin-top: 18px;
}

.contact-section {
  text-align: center;
}

.contact-details {
  padding: 27px 90px;
  border: 1px solid var(--primary-color);
  border-radius: 9px;
  margin-bottom: 24px;
  opacity: 90%;
}

.contact-details a {
  text-decoration: none;
  color: var(--primary-color);
  font-weight: bold;
}

.contact-details a:hover {
  text-decoration: underline;
}

.contact-details h6 {
  margin-top: 15px;
}

.contact-section footer {
  position: absolute;
  bottom: 9px;
  left: 0;
  right: 0;
  opacity: 70%;
  font-size: 12px;
  display: block;
  text-align: center;
}

#hobbies-title {
  opacity: 80%;
}

#top-left-abt,
#bot-right-abt {
  width: 90px;
}

#bot-right-abt {
  float: right;
}

#top-left {
  width: 130px;
  position: absolute;
  left: -10px;
  top: 45px;
}

#bot-right {
  width: 130px;
  position: absolute;
  bottom: 0px;
  right: 0px;
}

#top-left,
#bot-right {
  opacity: 90%;
}

#profile-image {
  width: 180px;
  /* border-radius: 50%; */
  border-radius: 75% 25% 75% 25%;
  opacity: 75%;
  background: #ae303083;
  position: relative;
  left: -15px;
}

#name {
  color: var(--primary-color);
  font-weight: bold;
}

#hobbies-img {
  padding: 3px;
  border: 1px solid white;
  opacity: 80%;
  width: 95%;
  border-radius: 5px;
}

@media (max-width: 991px) {
  .journey-box {
    max-width: 100%;
  }

  .hobbies-section {
    margin-left: 10px;
    padding: 0 15px 0 25px;
  }

  .hobbies-section p {
    font-size: 12px;
    margin-bottom: 25px;
  }

  .journey-btns {
    margin-left: 40px;
  }

  .hobbies-first-col {
    border-left: 1px solid var(--primary-color);
  }

  .projects-rows h5 {
    font-size: 14px;
    top: -30px;
  }

  .projects-rows .journey-btn {
    font-size: 10px;
    padding: 9px;
  }

  .project-card h6 {
    font-size: 12px;
    margin-top: 10px;
  }

  .projects-section p {
    font-size: 11px;
  }

  .projects-rows {
    max-width: 90%;
  }

  .each-project {
    margin: 0 auto;
  }

  .projects-section h2 {
    font-size: 27px;
  }

  #hobbies-img {
    display: none;
  }
}

@media (max-width: 768px) {
  nav a {
    margin: 12px !important;
    padding: 12px !important;
    font-size: 12px !important;
  }

  nav ul {
    left: -27px;
  }

  .home-section h2 {
    font-size: 54px;
  }

  .home-section h5 {
    font-size: 13px;
  }

  .home-section a {
    font-size: 13px;
    margin-right: 6px;
    padding: 12px 14px;
  }

  .about-section h2 {
    font-size: 24px;
  }

  .journey-intro {
    max-width: 95%;
  }

  .journey-box ul {
    padding-left: 10px;
  }

  .journey-btns {
    margin-left: 20px;
  }

  .journey-intro p {
    font-size: 13px;
  }

  .journey-section li {
    font-size: 17px;
    margin-bottom: 0;
  }

  .info-para p {
    font-size: 12px;
  }

  .info-para {
    padding: 4px;
    margin-left: 18px;
  }

  .journey-btn {
    font-size: 12px;
    padding: 12px;
  }

  .projects-section h2 {
    font-size: 22px;
  }

  .projects-rows {
    max-width: 80%;
  }

  .project-card {
    padding-left: 0 !important;
  }

  .contact-details {
    padding: 20px 60px;
  }

  .contact-details h5 {
    font-size: 18px;
  }

  .contact-details h6 {
    font-size: 14px;
  }

  .contact-section footer {
    font-size: 11px;
  }

  #profile-image {
    width: 135px;
  }

  #top-left,
  #bot-right {
    width: 100px;
  }
}

@media (max-width: 480px) {
  .home-section footer {
    font-size: 10px;
  }

  nav a {
    margin: 6px !important;
    padding: 6px !important;
    font-size: 9px !important;
  }

  nav ul {
    left: -18px;
  }

  .about-section footer,
  .projects-section footer {
    padding: 7px 0;
    font-size: 9px;
  }

  .home-section h2 {
    font-size: 36px;
  }

  .home-section h5 {
    font-size: 11px;
  }

  .home-section a {
    border-left: 2px var(--primary-color) solid;
    font-size: 9px;
    margin-right: 2px;
    padding: 8px;
  }

  .home-section a:hover {
    border-left: 2px var(--primary-color) solid;
  }

  .info-section {
    border-left: 3px var(--primary-color) solid;
    padding-left: 6px;
  }

  .about-section h2 {
    font-size: 18px;
  }

  .journey-intro {
    max-width: 100%;
  }

  .journey-box ul {
    padding-left: 0;
  }

  .journey-intro p {
    font-size: 11px;
    padding-left: 9px;
  }

  .journey-section li {
    font-size: 13px;
  }

  .info-para p {
    font-size: 10px;
  }

  .info-para {
    padding: 2px;
    margin-left: 12px;
  }

  .journey-btns {
    margin-left: 9px;
  }

  .journey-btn {
    font-size: 11px;
    padding: 11px;
  }

  .hobbies-section {
    margin-left: 4px;
  }

  .hobbies-section p {
    font-size: 9px;
  }

  .hobbies-section h6 {
    font-size: 12px;
  }

  .hobbies-first-col {
    border-left: none;
    padding: 0;
  }

  .projects-section h2 {
    font-size: 16px;
  }

  .projects-rows h5 {
    font-size: 12px;
  }

  .projects-rows .journey-btn {
    font-size: 9px;
  }

  .project-card h6 {
    font-size: 10px;
    margin-top: 5px;
  }

  .projects-section p {
    font-size: 9px;
  }

  .projects-rows {
    max-width: 90%;
  }

  .project-image {
    padding: 4px;
  }

  .contact-section h2 {
    margin-bottom: 27px;
  }

  .contact-details {
    padding: 18px 45px;
  }

  .contact-details h5 {
    font-size: 16px;
  }

  .contact-details h6 {
    font-size: 12px;
  }

  .contact-section footer {
    font-size: 10px;
  }

  #top-left,
  #bot-right {
    width: 90px;
  }

  #profile-image {
    width: 90px;
  }
}

@media (max-width: 320px) {
  .home-section footer {
    font-size: 9px;
  }

  nav a {
    margin: 5px !important;
    padding: 4px !important;
    font-size: 8px !important;
  }

  .about-section footer,
  .projects-section footer {
    padding: 5px 0;
    font-size: 7px;
  }

  .home-section h2 {
    font-size: 27px;
  }

  .home-section h5 {
    font-size: 9px;
  }

  .home-section a {
    font-size: 8px;
    padding: 7px;
  }

  .about-section h2 {
    font-size: 14px;
  }

  .journey-intro p {
    font-size: 9px;
    padding-left: 5px;
  }

  .journey-section li {
    font-size: 11px;
  }

  .info-para p {
    font-size: 8px;
  }

  .info-para {
    padding: 0;
  }

  .journey-btns {
    margin-left: 5px;
  }

  .journey-btn {
    font-size: 9px;
    padding: 9px;
  }

  .hobbies-section p {
    font-size: 8px;
  }

  .hobbies-section h6 {
    font-size: 11px;
  }

  .projects-section h2 {
    font-size: 13px;
    padding-top: 40px !important;
  }

  .each-project {
    margin-top: 30px !important;
  }

  .projects-rows h5 {
    font-size: 10px;
  }

  .projects-rows .journey-btn {
    font-size: 8px;
  }

  .project-card h6 {
    font-size: 8px;
  }

  .projects-section p {
    font-size: 7px;
    margin: 5px 0 10px !important;
  }

  .contact-section h2 {
    margin-bottom: 20px;
  }

  .contact-details {
    padding: 18px 36px;
  }

  .contact-details h5 {
    font-size: 15px;
  }

  .contact-details h6 {
    font-size: 11px;
  }

  .contact-section footer {
    font-size: 9px;
  }

  #profile-image {
    width: 72px;
    left: -23px;
  }

  #top-left,
  #bot-right {
    width: 70px;
  }
}

